# qip-guru

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SAFETY.md  SECURITY.md  pyproject.toml  qip.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
checklists/: deid-checklist.md  ig-caldicott.md  qip-registration.md
docs/: ARCHITECTURE.md  INCIDENT_LEARNING.md  PRODUCT_POSITIONING.md  RELEASE_READINESS.md  SOURCE_POLICY.md
examples/: README.md  synthetic_analgesia_time_qip.csv  synthetic_ed_flow_qip.csv  synthetic_sepsis_documentation_qip.csv  synthetic_ward_audit.csv
qip_guru/: __init__.py  charts.py  deid.py  paths.py  scaffold.py  sources.py
qipkit/: __init__.py  paths.py  scaffold.py  sources.py
scripts/: check_sources.py  release_check.py
skills/: audit-standard-finder.md  draft-smart-aim.md  incident-learning-triage.md  pdsa-coach.md  source-grounded-qip-planner.md
standards/: australia.json  canada.json  global.json  uk.json  us.json
templates/: audit-standards.md  charter.md  data-collection-spec.md  driver-diagram.md  pdsa-log.md
tests/: test_charts.py  test_deid.py  test_packaging.py  test_release_check.py  test_scaffold.py  test_sources.py
