[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "qip-guru"
version = "0.1.0rc1"
description = "QIP Guru: local-first healthcare QI scaffold, source profiles, static skill guides, and deterministic de-id helpers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Moeed Ahmed" }
]
keywords = ["quality-improvement", "clinical-audit", "patient-safety", "healthcare", "qip"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
qip = "qip:main"

[tool.setuptools]
py-modules = ["qip"]

[tool.setuptools.packages.find]
include = ["qip_guru*"]

[tool.setuptools.data-files]
"qip-guru/checklists" = ["checklists/*.md"]
"qip-guru/standards" = ["standards/*.json"]
"qip-guru/templates" = ["templates/*.md"]
