[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "qip-guru"
version = "0.1.0rc1"
description = "QIP Guru: agent-native local-first healthcare QI scaffolds, source profiles, static skill guides, synthetic examples, and deterministic safety checks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Moeed Ahmed" }
]
keywords = ["quality-improvement", "clinical-audit", "patient-safety", "healthcare", "qip", "agent-native"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
qip = "qip:main"
qip-guru = "qip:main"

[tool.setuptools]
py-modules = ["qip"]

[tool.setuptools.packages.find]
include = ["qip_guru*"]

[tool.setuptools.data-files]
"qip-guru/checklists" = ["checklists/*.md"]
"qip-guru/examples" = ["examples/*.csv", "examples/*.md"]
"qip-guru/skills" = ["skills/*.md"]
"qip-guru/standards" = ["standards/*.json"]
"qip-guru/templates" = ["templates/*.md"]
